--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "webpack": "^1.12.4"
   },
   "dependencies": {
+    "aes-es": "^1.0.0",
+    "pako": "^0.2.8",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
