--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "babel-core": "^6.1.4",
     "babel-loader": "^6.1.0",
     "babel-plugin-transform-runtime": "^6.1.4",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "eslint": "^1.9.0",
     "eslint-loader": "^1.1.1",
     "webpack": "^1.12.4"
   },
   "dependencies": {
-    "aes": "^0.1.0",
-    "react": "^0.14.2"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4"
   }
 }
