--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-plugin-transform-runtime": "^6.1.4",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^0.23.0",
     "eslint": "^1.9.0",
     "eslint-loader": "^1.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.4"
   },
   "dependencies": {
