--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pass-storage",
+  "name": "password-storage",
   "version": "0.0.1",
   "description": "Secure password storage",
   "keywords": [
@@ -10,7 +10,6 @@
   ],
   "author": "Andrey Kutejko <andy128k@gmail.com> (http://andy128k.net)",
   "license": "MIT",
-  "main": "index.js",
   "scripts": {
     "build_dev": "webpack -d",
     "build": "webpack -p",
@@ -18,22 +17,25 @@
   },
   "devDependencies": {
     "babel-core": "^6.1.4",
-    "babel-loader": "^6.1.0",
-    "babel-plugin-transform-runtime": "^6.1.4",
-    "babel-preset-es2015": "^6.1.18",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.9.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.13.1",
     "eslint-loader": "^1.1.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.4"
+    "eslint-plugin-react": "^7.5.1",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "aes-es": "^2.0.0",
-    "pako": "^0.2.8",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "react-redux": "^4.0.0",
+    "pako": "^1.0.6",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.0.4"
   }
 }
