--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aes-es": "^2.0.0",
+    "babel-polyfill": "^6.26.0",
     "pako": "^1.0.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
