--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "^4.13.1",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^7.5.1",
+    "favicons-webpack-plugin": "^0.0.7",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
   },
