--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "build_dev": "webpack -d",
     "build": "webpack -p",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -30,7 +31,8 @@
     "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "aes-es": "^2.0.0",
