--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "build_dev": "webpack -d",
     "build": "webpack -p",
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./.jest.json"
   },
   "devDependencies": {
     "babel-core": "^6.1.4",
     "babel-eslint": "^8.0.3",
+    "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-react": "^7.5.1",
     "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
