--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "Andrey Kutejko <andy128k@gmail.com> (http://andy128k.net)",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -d",
-    "build:production": "webpack -p",
-    "start": "webpack-dev-server",
+    "build": "webpack --mode development",
+    "build:production": "webpack --mode production",
+    "start": "webpack-dev-server --mode development",
     "test": "jest --config ./.jest.json",
     "test:watch": "jest --config ./.jest.json --watch"
   },
@@ -28,16 +28,17 @@
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.28.7",
     "eslint": "^4.13.1",
-    "eslint-loader": "^1.1.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-jest": "^21.6.1",
     "eslint-plugin-react": "^7.5.1",
-    "favicons-webpack-plugin": "^0.0.7",
-    "html-webpack-plugin": "^2.30.1",
+    "favicons-webpack-plugin": "^0.0.8",
+    "html-webpack-plugin": "^3.1.0",
     "jest": "^22.0.6",
     "redux-saga": "^0.16.0",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "style-loader": "^0.20.0",
+    "webpack": "^4.4.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
     "aes-es": "^2.0.0",
