--- a/package.json
+++ b/package.json
@@ -18,26 +18,25 @@
     "test:watch": "jest --config ./.jest.json --watch"
   },
   "devDependencies": {
-    "babel-core": "^6.1.4",
-    "babel-eslint": "^8.0.3",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.13.1",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.0",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.0",
+    "css-loader": "^2.0.0",
+    "eslint": "^5.6.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-jest": "^21.22.1",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-react": "^7.5.1",
     "favicons-webpack-plugin": "^0.0.9",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.0.6",
-    "redux-saga": "^0.16.0",
-    "style-loader": "^0.20.0",
+    "jest": "^24.0.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.4.0",
-    "webpack-cli": "^2.0.13",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
@@ -46,7 +45,8 @@
     "pako": "^1.0.6",
     "react": "^16.5.2",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.0.4"
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.0",
+    "redux-saga": "^1"
   }
 }
