--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+    ["@babel/preset-env", {
+      "useBuiltIns": "usage",
+      "corejs": 3
+      , "debug": true
+    }],
+    "@babel/preset-react"
+  ],
   "plugins": [
     "@babel/proposal-class-properties"
   ]
