--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.0",
-    "css-loader": "^2.0.0",
+    "css-loader": "^3",
     "eslint": "^5.6.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-jest": "^22.0.0",
@@ -41,12 +41,13 @@
   },
   "dependencies": {
     "aes-es": "^3",
-    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.1.4",
     "pako": "^1.0.6",
     "react": "^16.5.2",
     "react-dom": "^16.2.0",
     "react-redux": "^7",
     "redux": "^4.0.0",
-    "redux-saga": "^1"
+    "redux-saga": "^1",
+    "regenerator-runtime": "^0.13.2"
   }
 }
