--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react": "^7.5.1",
     "favicons-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.0.0",
+    "react-test-renderer": "^16.11.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.1.0",
