--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "@babel/preset-react": "^7",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.0",
-    "babel-jest": "^24.0.0",
+    "babel-jest": "^25.1",
     "babel-loader": "^8.0.0",
     "css-loader": "^3",
     "eslint": "^6",
     "eslint-loader": "^3",
     "eslint-plugin-jest": "^23",
     "eslint-plugin-react": "^7.5.1",
-    "favicons-webpack-plugin": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "favicons-webpack-plugin": "^3",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.0.0",
+    "jest": "^25.1",
     "react-test-renderer": "^16.11.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
