--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "eslint-loader": "^4",
     "eslint-plugin-jest": "^24",
     "eslint-plugin-react": "^7",
-    "favicons-webpack-plugin": "^4",
-    "html-webpack-plugin": "^4",
+    "favicons": "^6",
+    "favicons-webpack-plugin": "^5",
+    "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26",
     "react-test-renderer": "^17",
     "style-loader": "^2",
-    "webpack": "^4",
-    "webpack-cli": "^3",
+    "webpack": "^5",
+    "webpack-cli": "^4",
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
