update eslint to version 8

--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "dist": "rm -rf ./public ; yarn build:production ; cd ./public ; tar -caf ../dist.tar.xz .",
     "start": "webpack-dev-server --mode development",
     "test": "jest --config ./.jest.json",
-    "test:watch": "jest --config ./.jest.json --watch"
+    "test:watch": "jest --config ./.jest.json --watch",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@babel/core": "^7",
+    "@babel/eslint-parser": "^7",
     "@babel/plugin-proposal-class-properties": "^7",
     "@babel/preset-env": "^7",
     "@babel/preset-react": "^7",
-    "babel-eslint": "^10",
     "babel-jest": "^27",
     "babel-loader": "^8",
     "css-loader": "^6",
-    "eslint": "^7",
-    "eslint-loader": "^4",
-    "eslint-plugin-jest": "^25",
+    "eslint": "^8",
+    "eslint-plugin-jest": "^25.2",
     "eslint-plugin-react": "^7",
     "favicons": "^6",
     "favicons-webpack-plugin": "^5",
