--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@ env:
   browser: true
   node: true
   es6: true
-parser: babel-eslint
+parser: "@babel/eslint-parser"
 parserOptions:
   sourceType: module
   jsx: true
