--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "eslint": "^8",
     "eslint-plugin-jest": "^25.3",
     "eslint-plugin-react": "^7",
-    "favicons": "^6",
-    "favicons-webpack-plugin": "^5",
+    "favicons": "^7.0.0-beta.1",
+    "favicons-webpack-plugin": "git+https://github.com/andy128k/favicons-webpack-plugin.git#favicons-7.0.0",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27",
