--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@ plugins:
 extends:
   - eslint:recommended
   - plugin:react/recommended
+  - plugin:react-hooks/recommended
   - plugin:jest/recommended
 rules:
   quotes: [off, double]
