--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8",
     "eslint-plugin-jest": "^26.0",
     "eslint-plugin-react": "^7",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "favicons": "^7.0.0-beta.1",
     "favicons-webpack-plugin": "git+https://github.com/andy128k/favicons-webpack-plugin.git#favicons-7.0.0",
     "html-webpack-plugin": "^5",
