--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "eslint-plugin-jest": "^27",
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "favicons": "^7.0.0-beta.1",
-    "favicons-webpack-plugin": "git+https://github.com/andy128k/favicons-webpack-plugin.git#favicons-7.0.0",
+    "favicons": "^7.0.0",
+    "favicons-webpack-plugin": "^6.0.0-alpha.1",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29",
