--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4.4.0",
     "favicons": "^7.0.0",
-    "favicons-webpack-plugin": "^6.0.0-alpha.1",
+    "favicons-webpack-plugin": "^6",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29",
