--- a/package.json
+++ b/package.json
@@ -15,19 +15,14 @@
     "build:production": "webpack --mode production",
     "dist": "rm -rf ./public ; yarn build:production ; cd ./public ; tar -caf ../dist.tar.xz .",
     "start": "webpack-dev-server --mode development",
-    "test": "jest --config ./.jest.json",
-    "test:watch": "jest --config ./.jest.json --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "fmt": "prettier --write .",
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@babel/core": "^7",
-    "@babel/eslint-parser": "^7",
-    "@babel/plugin-proposal-class-properties": "^7",
-    "@babel/preset-env": "^7",
-    "@babel/preset-react": "^7",
-    "babel-jest": "^29",
-    "babel-loader": "^9",
+    "@swc/core": "^1.3.36",
+    "@swc/jest": "^0.2.24",
     "css-loader": "^6",
     "eslint": "^8",
     "eslint-plugin-jest": "^27",
@@ -37,10 +32,11 @@
     "favicons-webpack-plugin": "^6",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29",
+    "jest": "^29.4.3",
     "prettier": "^2.6.2",
     "react-test-renderer": "^18",
     "style-loader": "^3",
+    "swc-loader": "^0.2.3",
     "webpack": "^5",
     "webpack-cli": "^5",
     "webpack-dev-server": "^4"
@@ -48,7 +44,6 @@
   "dependencies": {
     "aes-es": "^3",
     "classnames": "^2.3.1",
-    "core-js": "^3.22.2",
     "pako": "^2",
     "react": "^18",
     "react-dom": "^18",
