--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "webpack --mode development",
     "build:production": "webpack --mode production",
-    "dist": "rm -rf ./public ; yarn build:production ; cd ./public ; tar -caf ../dist.tar.xz .",
+    "dist": "rm -rf ./public ; npm run build:production ; cd ./public ; tar -caf ../dist.tar.xz .",
     "start": "webpack-dev-server --mode development",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -49,7 +49,6 @@
     "react-dom": "^18",
     "react-redux": "^8",
     "react-router-dom": "^6",
-    "redux": "^4.0.0",
-    "regenerator-runtime": "^0.13.2"
+    "redux": "^4.0.0"
   }
 }
