--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     "pako": "^2",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8",
-    "react-router-dom": "^6",
-    "redux": "^4.0.0"
+    "react-router-dom": "^6"
   }
 }
