--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "password-storage",
   "version": "0.0.1",
   "description": "Secure password storage",
-  "keywords": [
-    "password",
-    "storage",
-    "secure",
-    "vault"
-  ],
+  "keywords": ["password", "storage", "secure", "vault"],
   "author": "Andrey Kutejko <andy128k@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -17,23 +12,19 @@
     "start": "webpack-dev-server --mode development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "fmt": "prettier --write .",
-    "lint": "eslint src"
+    "fmt": "biome check --formatter-enabled=true --organize-imports-enabled=true --linter-enabled=false --write .",
+    "lint": "biome lint ."
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
     "css-loader": "^7.1.2",
-    "eslint": "^8",
-    "eslint-plugin-jest": "^27",
-    "eslint-plugin-react": "^7",
-    "eslint-plugin-react-hooks": "^4.4.0",
     "favicons": "^7.0.0",
     "favicons-webpack-plugin": "^6",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.3",
-    "prettier": "^3",
     "react-test-renderer": "^18",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.3",
