--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@biomejs/biome": "^1.9.4",
     "@swc/core": "^1.3.36",
     "@swc/jest": "^0.2.24",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "css-loader": "^7.1.2",
     "favicons": "^7.0.0",
     "favicons-webpack-plugin": "^6",
     "html-webpack-plugin": "^5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.3",
-    "react-test-renderer": "^18",
+    "jest-environment-jsdom": "^29.7.0",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.3",
     "webpack": "^5",
@@ -36,8 +38,8 @@
     "aes-es": "^3",
     "classnames": "^2.3.1",
     "pako": "^2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-router-dom": "^6"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2"
   }
 }
